creazione portfolio new

--- a/canvas/index.html
+++ b/canvas/index.html
@@ -13,25 +13,24 @@
         </figure>
         <nav>
             <ul>
-                <li>Overview</li>
-                <li>Team</li>
-                <li>Pricing</li>
-                <li>Enterprise</li>
+                <li>Giovanni Carotenuto</li>
+                <li>Chi Sono</li>
+                <li>Progetti</li>
+                <li>Info</li>
             </ul>
         </nav>
     </header>
     <main>
         <div class="banner">
-            <h5>@Lundeveloper</h5>
+            <h4>@GioStock</h4>
             <div>
-                <h1 class="left">ANIMATION spider man</h1>
-                <h1 class="right">using JAvascript</h1>
+                <h1 class="left"><a href="../canvas/storia.html">chi sono</a></h1><br>
+                <h1 class="right">Progetti</h1><br>
+                <h1 class="right">info</h1>
+
             </div>
-            <h4>
-                Subscribe to the channel to continuously
-                <br>update interesting videos
-            </h4>
-            <button>Subscribe Now &#8599</button>
+           
+            <button>Contattami Qui &#8599</button>
 
             <canvas id="dotsCanvas"></canvas>
         </div>
